--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Tailwind CSS</title>
     <!-- fixed relative path to generated CSS -->
-    <link href="../output.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -16,7 +16,7 @@
                 
                 <div class="flex justify-center mb-6">
                     <div class="w-28 h-28 md:w-40 md:h-40 rounded-full overflow-hidden border-4 border-white shadow-lg">
-                        <img src="./image1/image1.jpg"
+                        <img src="image1.jpg"
                              alt="Kemigisha Maria" class="w-full h-full object-cover">
                     </div>
                 </div>
@@ -163,4 +163,5 @@
         </div>
     </div>
 </body>
+
 </html>
